# spider

./: .dockerignore  .gersemirc  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  Taskfile.yml  build-tasks.yaml  dep-tasks.yaml  index.yaml  lint-requirements.txt  lint-tasks.yaml  lint-tasks.yml  lint-test-requirements.txt  mypy.ini  pyproject.toml  requirements-dev.txt  ruff.toml  spider-0.1.2.tgz  spider-0.1.3.tgz  stack-doc.md  taskfile.yaml  test-requirements.txt  test-tasks.yaml  tombi.toml
components/spider-client/: Cargo.toml
components/spider-client/src/: client.rs  error.rs  job.rs  lib.rs  resource_group.rs  test_utils.rs
components/spider-core/: Cargo.toml
components/spider-core/src/: compression.rs  job.rs  lib.rs  session.rs  task.rs  types.rs
components/spider-core/tests/: test_task_graph_serde.rs
components/spider-execution-manager/: Cargo.toml
components/spider-execution-manager/src/: client.rs  config.rs  lib.rs  liveness.rs  process_pool.rs  runtime.rs
components/spider-execution-manager/tests/: grpc_scheduler_client_test.rs
components/spider-proto-rust/: Cargo.toml  build.rs
components/spider-proto-rust/src/: assignment.rs  error.rs  id.rs  io.rs  job.rs  lib.rs  payload.rs  scheduler.rs  scheduler_registration.rs  unpack.rs
components/spider-proto-rust/tests/: common_proto_test.rs
components/spider-scheduler/: Cargo.toml
components/spider-scheduler/examples/: round_robin_load.rs
components/spider-scheduler/src/: config.rs  core.rs  dispatch.rs  dispatch_queue.rs  error.rs  execution_manager_registry.rs  grpc.rs  lib.rs  runtime.rs  service.rs  storage_client.rs  types.rs
components/spider-storage/: Cargo.toml
components/spider-storage/src/: cache.rs  config.rs  db.rs  error.rs  grpc.rs  job_submission.rs  lib.rs  logging.rs  protocol.rs  ready_queue.rs  state.rs  task_instance_pool.rs
components/spider-storage/tests/: jcb_test.rs  mariadb_infra.rs  mariadb_test.rs  recovery_test.rs  runtime_recovery_test.rs  scheduling_infra.rs  task_graph_builder.rs  test_jcb.rs  test_mariadb.rs  test_spider_storage.rs
components/spider-task-executor/: Cargo.toml
components/spider-task-executor/src/: error.rs  lib.rs  loader.rs  manager.rs  protocol.rs
components/spider-tdl/: Cargo.toml
components/spider-tdl/src/: error.rs  ffi.rs  lib.rs  register.rs  std.rs  task.rs  task_context.rs  tdl_types.rs  version.rs  wire.rs
components/spider-tdl/tests/: test_task_macro.rs
components/spider-utils/: Cargo.toml
components/spider-utils/src/: config.rs  lib.rs  logging.rs  wire.rs
examples/example-tdl-package-complex/: Cargo.toml
examples/example-tdl-package-complex/src/: lib.rs
examples/joining-tasks/: .clang-format  CMakeLists.txt
examples/joining-tasks/src/: client.cpp  tasks.cpp  tasks.hpp
examples/quick-start/: .clang-format  CMakeLists.txt
examples/quick-start/src/: client.cpp  tasks.cpp  tasks.hpp
python/spider-py/: README.md  pyproject.toml
python/spider/client/: pyproject.toml
python/spider/core/: pyproject.toml
python/spider/task_executor/: pyproject.toml
src/spider/: .clang-format  CMakeLists.txt  spider.cpp
src/spider/client/: Concepts.hpp  Context.cpp  Context.hpp  Data.cpp  Data.hpp  Driver.cpp  Driver.hpp  Error.hpp  Exception.hpp  Future.cpp  Future.hpp  Job.cpp  Job.hpp  KeyValueData.cpp  KeyValueData.hpp  Spider.hpp  Task.cpp  Task.hpp  TaskContext.cpp  TaskContext.hpp  TaskGraph.cpp  TaskGraph.hpp  spider.hpp  task.hpp  type_utils.hpp
src/spider/core/: BoostAsio.hpp  Context.hpp  Data.hpp  DataCleaner.cpp  DataCleaner.hpp  DataImpl.hpp  Driver.hpp  DriverCleaner.cpp  DriverCleaner.hpp  Error.cpp  Error.hpp  JobCleaner.cpp  JobCleaner.hpp  JobMetadata.hpp  JobRecovery.cpp  JobRecovery.hpp  KeyValueData.hpp  MsgPack.hpp  Serializer.hpp  Task.cpp  Task.hpp  TaskContextImpl.hpp  TaskGraph.hpp  TaskGraphImpl.cpp  TaskGraphImpl.hpp
src/spider/io/: BoostAsio.hpp  DataSerializer.hpp  Serializer.hpp  msgpack_message.cpp  msgpack_message.hpp
src/spider/scheduler/: FifoPolicy.cpp  FifoPolicy.hpp  SchedulerMessage.hpp  SchedulerPolicy.hpp  SchedulerServer.cpp  SchedulerServer.hpp  SchedulerTaskCache.cpp  SchedulerTaskCache.hpp  scheduler.cpp
src/spider/storage/: DataStorage.hpp  JobSubmissionBatch.hpp  MetadataStorage.hpp  MySqlConnection.cpp  MySqlConnection.hpp  MySqlStorage.cpp  MySqlStorage.hpp  MysqlStorage.cpp  MysqlStorage.hpp  StorageConnection.hpp  StorageFactory.hpp
src/spider/tdl/: Error.hpp
src/spider/utils/: BoostAsio.hpp  LruCache.hpp  MsgPack.hpp  ProgramOptions.hpp  StopFlag.cpp  StopFlag.hpp  StopToken.cpp  StopToken.hpp  TimedCache.hpp  env.cpp  env.hpp  logging.cpp  logging.hpp  pipe.cpp  pipe.hpp
src/spider/worker/: ChildPid.cpp  ChildPid.hpp  DllLoader.cpp  DllLoader.hpp  ExecutorHandle.cpp  ExecutorHandle.hpp  FunctionManager.cpp  FunctionManager.hpp  FunctionNameManager.cpp  FunctionNameManager.hpp  Process.cpp  Process.hpp  TaskExecutor.cpp  TaskExecutor.hpp  TaskExecutorMessage.hpp  WorkerClient.cpp  WorkerClient.hpp  WorkerErrorCode.cpp  message_pipe.cpp  (+4 more)
tests/: .clang-format  CMakeLists.txt
tests/client/: cancel-test.cpp  client-test.cpp  test-Driver.cpp
tests/integration/: client.py  test_cancel.py  test_client.py  test_no_exit.py  test_scheduler_worker.py  test_signal.py  test_singal.py  utils.py
tests/io/: test-MsgpackMessage.cpp
tests/scheduler/: test-JobRecovery.cpp  test-SchedulerPolicy.cpp  test-SchedulerServer.cpp
tests/storage/: StorageTestHelper.hpp  test-DataStorage.cpp  test-MetadataStorage.cpp
tests/tdl/: test-ast.cpp  test-codegen-py.cpp  test-parser-ast.cpp  test-parser.cpp  test-pass-analysis-DetectUndefinedStruct.cpp  test-pass-analysis-StructSpecDependencyGraph.cpp
tests/tdl-integration/: Cargo.toml
tests/utils/: CoreDataUtils.hpp  CoreTaskUtils.cpp  CoreTaskUtils.hpp  FunctionManagerUtils.hpp
tests/wolf/: .clang-format  CMakeLists.txt
tests/worker/: signal-test.cpp  signal-test.hpp  test-FunctionManager.cpp  test-MessagePipe.cpp  test-Process.cpp  test-TaskExecutor.cpp  worker-test.cpp  worker-test.hpp
(+432 files in other folders)
