[workspace]
resolver = "3"
members = [
  "components/spider-core",
  "components/spider-derive",
  "components/spider-execution-manager",
  "components/spider-storage",
  "components/spider-task-executor",
  "components/spider-tdl",
  "components/spider-tdl-derive",
  "examples/huntsman/complex/tasks",
  "examples/huntsman/complex/types",
  "tests/huntsman/integration-test-tasks",
  "tests/huntsman/task-executor",
  "tests/huntsman/tdl-integration",
]
