[workspace]
resolver = "3"
members = [
  "components/spider-client",
  "components/spider-core",
  "components/spider-derive",
  "components/spider-execution-manager",
  "components/spider-proto-rust",
  "components/spider-scheduler",
  "components/spider-storage",
  "components/spider-task-executor",
  "components/spider-tdl",
  "components/spider-tdl-derive",
  "components/spider-utils",
  "examples/huntsman/complex/tasks",
  "examples/huntsman/complex/types",
  "examples/huntsman/nn/core",
  "examples/huntsman/nn/tasks",
  "tests/huntsman/e2e",
  "tests/huntsman/em-runtime",
  "tests/huntsman/integration-test-tasks",
  "tests/huntsman/task-executor",
  "tests/huntsman/tdl-integration",
  "tests/huntsman/test-utils",
]
default-members = [
  "components/spider-client",
  "components/spider-core",
  "components/spider-derive",
  "components/spider-execution-manager",
  "components/spider-proto-rust",
  "components/spider-scheduler",
  "components/spider-storage",
  "components/spider-task-executor",
  "components/spider-tdl",
  "components/spider-tdl-derive",
  "components/spider-utils",
]
