[project]
name = "spider"
version = "0.1.0"
description = "Spider is a distributed task execution framework."
readme = "README.md"
requires-python = ">=3.10"

[tool.uv.sources]
spider-core = { workspace = true }

[tool.uv.workspace]
members = [
  "python/spider/core",
  "python/spider/client",
  "python/spider/task_executor",
]
