[package]
name = "spider-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "spider_core"
path = "src/lib.rs"

[dependencies]
non-empty-string = { version = "0.2.6", features = ["serde"] }
rmp-serde = "1.3.1"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.18"
uuid = { version = "1.19.0", features = ["serde", "v4"] }
