[package]
name = "spider-execution-manager"
version = "0.1.0"
edition = "2024"

[lib]
name = "spider_execution_manager"
path = "src/lib.rs"

[dependencies]
bincode = "1.3.3"
bytes = "1.10"
futures-util = { version = "0.3.31", default-features = false, features = [
  "sink",
  "std"
] }
rmp-serde = "1.3.1"
spider-core = { path = "../spider-core" }
spider-task-executor = { path = "../spider-task-executor" }
spider-tdl = { path = "../spider-tdl" }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = [
  "io-util",
  "macros",
  "process",
  "rt",
  "sync",
  "time"
] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = { version = "0.1.41", default-features = false, features = ["std"] }
