[package]
name = "spider-proto-rust"
version = "0.1.0"
edition = "2024"

[lib]
name = "spider_proto_rust"
path = "src/lib.rs"

[dependencies]
prost = "0.13.5"
spider-core = { path = "../spider-core" }
thiserror = "2.0.18"
tonic = "0.12.3"
tracing = { version = "0.1.41", default-features = false, features = ["std"] }

[build-dependencies]
tonic-build = "0.12.3"
