[package]
name = "spider-scheduler"
version = "0.1.0"
edition = "2024"

[lib]
name = "spider_scheduler"
path = "src/lib.rs"

[dependencies]
async-channel = "2.3.1"
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
spider-core = { path = "../spider-core" }
spider-proto-rust = { path = "../spider-proto-rust" }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt", "sync", "time"] }
tokio-util = "0.7.18"
tonic = "0.14.6"
tracing = { version = "0.1.41", default-features = false, features = ["std"] }

[dev-dependencies]
anyhow = "1.0.102"
dashmap = "6.1.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
