[package]
name = "spider-task-executor"
version = "0.1.0"
edition = "2024"

[lib]
name = "spider_task_executor"
path = "src/lib.rs"

[[bin]]
name = "spider-task-executor"
path = "src/bin/spider_task_executor.rs"

[dependencies]
anyhow = "1.0.98"
bincode = "1.3.3"
bytes = "1.10"
futures-util = { version = "0.3.31", default-features = false, features = [
  "sink",
  "std"
] }
libloading = "0.8.5"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
spider-core = { path = "../spider-core" }
spider-tdl = { path = "../spider-tdl" }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = [
  "io-std",
  "io-util",
  "macros",
  "rt",
  "sync",
  "time"
] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = { version = "0.1.41", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
  "env-filter",
  "fmt",
  "json"
] }
