[package]
name = "spider-tdl"
version = "0.1.0"
edition = "2024"

[lib]
name = "spider_tdl"
path = "src/lib.rs"

[dependencies]
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
spider-core = { path = "../spider-core" }
spider-tdl-derive = { path = "../spider-tdl-derive" }
thiserror = "2.0.18"

[dev-dependencies]
anyhow = "1.0.98"
