[package]
name = "spider-tdl"
version = "0.1.0"
edition = "2024"

[lib]
name = "spider_tdl"
path = "src/lib.rs"

[features]
default = []
derive = ["dep:spider-tdl-derive"]

[dependencies]
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
spider-core = { path = "../spider-core" }
spider-tdl-derive = { path = "../spider-tdl-derive", optional = true }
thiserror = "2.0.18"

[dev-dependencies]
anyhow = "1.0.98"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
spider-core = { path = "../spider-core" }

[[test]]
name = "test_task_macro"
path = "tests/test_task_macro.rs"
required-features = ["derive"]
