[package]
name = "spider-utils"
version = "0.1.0"
edition = "2024"

[lib]
name = "spider_utils"
path = "src/lib.rs"

[dependencies]
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tracing-appender = "0.2.5"
tracing-subscriber = {
  version = "0.3.23",
  default-features = false,
  features = ["env-filter", "fmt", "json"]
}
