[package]
name = "spider-utils"
version = "0.1.0"
edition = "2024"

[lib]
name = "spider_utils"
path = "src/lib.rs"

[dependencies]
rand = "0.9.1"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["time"] }
tonic = "0.14.6"
tracing-appender = "0.2.5"
tracing-subscriber = {
  version = "0.3.23",
  default-features = false,
  features = ["env-filter", "fmt", "json"]
}
yaml_serde = "0.10.4"

[dev-dependencies]
tokio = { version = "1.50.0", features = ["macros", "rt", "time"] }
