#:tombi schema.strict = false

[project]
name = "yscope-spider-py"
version = "0.2.1"
description = "A distributed task execution framework."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "Sitao Wang", email = "sitao.wang@yscope.com" },
  { name = "Zhihao Lin", email = "lin.zhihao@yscope.com" },
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Typing :: Typed",
]
dependencies = [
  "lark>=1.2.2",
  "mariadb>=1.1.14",
  # Lock the minor version to 1.1 to sync with `msgpack-types`
  "msgpack>=1.1.0,<1.2.0",
  "msgpack-types>=0.5.0",
]

[project.scripts]
spider-py-task-executor = "spider_py.task_executor.task_executor:main"

[dependency-groups]
dev = ["mypy>=1.12.0", "pytest>=9.0.0", "ruff>=0.4.4"]

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [".python-version", "tests", "uv.lock"]

[tool.hatch.build.targets.wheel]
packages = ["src/spider_py"]

[tool.mypy]
strict = true
# Additional output
pretty = true
show_error_code_links = true
show_error_context = true

[[tool.mypy.overrides]]
module = ["mariadb.*"]
ignore_missing_imports = true

[tool.pytest]
markers = [
  "integration: Mark test as an integration test",
  "storage: Mark unit tests as needing external storage service",
]
minversion = "9.0"
testpaths = ["tests"]

[tool.ruff]
extend = "../../ruff.toml"

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "INP001",  # Allow implicit namespace package for tests
  "PLR2004",  # Allow use of magic value
  "S101",  # Allow use of `assert` (security warning)
  "S603",  # Allow use of `subprocess.Popen` (security warning)
  "T201",  # Allow use of `print` (testing)
  "TC003",  # Ignore performance overhead of imports only used for type checking
]

[tool.ruff.lint.flake8-self]
ignore-names = ["_impl"]
